@@ -297,3 +297,4 @@ v0.71.4:
 	- disabled /tw wildperm, usedefault and wildignore if using permissions. Add permission nodes for these.
 	- Added a fix to prevent players firing from the wild into a PVP disabled town to attack.
 	- Added '/town set fire [on/off]' to prevent fire damage/spread in a town.
+	- Fixed an error where a town/nation data file may not be moved if a previous town/nation of the same name had been deleted/renamed prior.
